fix: use flex-start instead of start for align-items
The `start` keyword for `align-items` has mixed browser support in
flexbox contexts. This causes autoprefixer to emit a warning:

  (84:3) autoprefixer: start value has mixed support, consider using
  flex-start instead

`flex-start` is the canonical flexbox value with universal support.

--- a/style/_base.scss
+++ b/style/_base.scss
@@ -35,7 +35,7 @@
                 z-index: 100;
                 display: flex;
                 flex-direction: column;
-                align-items: start;
+                align-items: flex-start;
             }
 
             &_moveables {
