--- a/style/combined.css
+++ b/style/combined.css
@@ -313,7 +313,7 @@
   z-index: 100;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 .flexlayout__layout_moveables {
   visibility: hidden;
