--- a/style/rounded.css
+++ b/style/rounded.css
@@ -82,7 +82,7 @@
   z-index: 100;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 .flexlayout__layout_moveables {
   visibility: hidden;
